--- a/project_be_v2/src/main/resources/application.properties
+++ b/project_be_v2/src/main/resources/application.properties
@@ -21,6 +21,6 @@ jwt.refresh=86400000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ledientien2005@gmail.com
-spring.mail.password=rgih pwbd rmhq umus
+spring.mail.password=ibhs krlr rlvi qywb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
