feature: done project without updadte

--- a/project_be_v2/src/main/resources/application.properties
+++ b/project_be_v2/src/main/resources/application.properties
@@ -24,3 +24,12 @@ spring.mail.username=ledientien2005@gmail.com
 spring.mail.password=ibhs krlr rlvi qywb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Cloudinary
+cloudinary.cloud-name=dv1nv2bj7
+cloudinary.api-key=627236299488196
+cloudinary.api-secret=J_cFRfX3W5Z1G71_1TIIzzUYO8c
+
+# Multipart file upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
